# APIJavadocs

./: .editorconfig  .gitignore  404.html  7.2.0  7.3.0  CNAME  README.md  components.yaml  index.html  metadata.yaml  style.css
.github/workflows/: publish.yml
7.2.0/: serialized-form.html
7.3.0/: allclasses-frame.html  deprecated-list.html
SpongeAPI/10.0.0-SNAPSHOT/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  overview-summary.html  package-search-index.js
SpongeAPI/8.2.0-SNAPSHOT/: allclasses-index.html  member-search-index.js  overview-summary.html  serialized-form.html
SpongeAPI/9.1.0-SNAPSHOT/: help-doc.html  overview-tree.html
_generator/: generate.py  metadata.schema.json  pyproject.toml  requirements.txt
_generator/jdgenerator/: __init__.py  generate.py
_generator/static/: 404.html  style.css
_generator/tmpl/: 404.html  index.html
collections/0.0.1/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
core/4.2.0-SNAPSHOT/: deprecated-list.html  element-list  help-doc.html  overview-summary.html  package-search-index.js  serialized-form.html
extra-dfu2/4.2.0-SNAPSHOT/: constant-values.html
extra-dfu3/4.2.0-SNAPSHOT/: allclasses.html  element-list  package-search-index.js  type-search-index.js
extra-dfu4/4.2.0-SNAPSHOT/: allpackages-index.html  (+6 more)
spongeapi/: latest
(+63406 files in other folders)
